[project]
name = "rss-feeds"
version = "0.1.0"
description = "Self-updating Atom/RSS feeds for sites without native feeds. Starts with Reuters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "curl-cffi>=0.7",
    "feedgen>=1.0",
    "feedparser>=6.0",
    "lxml>=5.0",
    "pydantic>=2",
    "python-dateutil>=2.8",
    "pytz>=2024.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pylint.main]
disable = [
    # Deliberate project conventions, not defects - see feeds skill:
    "broad-exception-caught",        # per-item isolation: one bad item must not sink the run
    "import-outside-toplevel",       # a few intentionally-local imports to avoid heavy/circular deps
    "duplicate-code",                # generators intentionally copy an existing one as a template
    # Style opinions not worth enforcing on solo generator scripts:
    "missing-function-docstring",
    "missing-module-docstring",
    "logging-fstring-interpolation", # f-strings in logging calls; perf concern is irrelevant here
    # False positive: pylint misreads pytz.UTC.localize() as an unbound-method call missing `dt`
    "no-value-for-parameter",
]
max-line-length = 120
max-locals = 25
extension-pkg-allow-list = ["lxml.etree"]
